# df-data-profile

./: .env  .env.aws_ec2_container  .env.aws_ec2_native  .env.aws_ecs_container  .env.on_prem_vm_native  .gitignore  Dockerfile  Dockerfile copy  Dockerfile copy 2  Dockerfile copy 3  Dockerfile copy 4  Makefile  README.md  app_env.aws_ec2_native.dev.env  app_env.aws_ecs_container.dev.env  app_env.on_prem_vm_native.dev.env  aws_ec2_container.env  aws_ec2_docker_container.env  aws_ec2_native.env  aws_ecs_container.env  aws_ecs_docker_container.env  on_prem_vm_native.env  pyproject.toml  requirements.txt  setup.py
cfg/: api_log.ini  app_config.dev.yaml  config_dev.yaml
dp_app/: __main__.py  dataset.py  dp_app_api.py  dp_app_cli.py  dp_app_core.py  dp_app_old.py  settings.py
dp_app/api_data/: datasets.json
dp_app/cfg/: api_log.ini  config_dev.yaml
dp_app/log/: dp_app_api_log.ini
dp_app/tests/: test_misc.py
dp_app/utils/: file_io.py  logger.py  misc.py
scripts/: dp_app
src/dp_app/: dp_app_api.py  dp_app_cli.py  dp_app_core.py
